TERMINADO 102% AHORA SI
AAAA

Co-Authored-By: Ismael Torres <ignacio25.it@gmail.com>

--- a/Vistas/winAltaItemPedido.xaml
+++ b/Vistas/winAltaItemPedido.xaml
@@ -10,7 +10,7 @@
         <ObjectDataProvider
             x:Key="LIST_ARTICULO"
             ObjectType="{x:Type svc:TrabajarArticulos}"
-            MethodName="TraerArticulosColeccion"
+            MethodName="TraerColeccionConStock"
         />
         
         <CollectionViewSource
