--- a/Vistas/winClientes.xaml
+++ b/Vistas/winClientes.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="Alta de Nuevo Cliente" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow">
+        Title="Alta de Nuevo Cliente" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Cliente"
